--- a/Homework/Home10DomForm/Home10Forms.html
+++ b/Homework/Home10DomForm/Home10Forms.html
@@ -23,6 +23,9 @@
 <h1>Task2</h1>
 <p id="2number"> </p>
 
+<h1> Task3 </h1>
+<ul id="sessions"></ul>
+
 <h1>Task4</h1>
 <form action="task4" id="4">
     <button id="butt4next" > next </button>
@@ -37,6 +40,14 @@
     <label> Your age: <input type='number' placeholder="enter age" id="verification"></label>
     <button id="task6Age">Enter</button>
     <p id="message"></p>
+</form>
+
+   <h1> Task7</h1>
+<form name="form7">
+    <label >Row <input type="text" id="row"></label>
+    <label >Cell <input type="text" id="cell"></label>
+    <label >Info <input type="text" id="infos"></label>
+<button id="buttinTask7"> enter </button>
 </form>
 <script src="main10.js"></script>
 </body>
