--- a/Homework/miniProject/User-Details.html
+++ b/Homework/miniProject/User-Details.html
@@ -23,23 +23,36 @@
             display: block;
             margin: 0 auto;
             width: 90%;
+            height: 40px;
+            background: beige;
+            font-size: 30px;
         }
 
         .ppp {
             display: inline-block;
-            width: 18%;
+            width: 17vw;
+            height: 10vh;
             margin: 10px;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: 4px solid rebeccapurple;
         }
 
         .aaa {
-            display: block;
-            text-align: center;
-            margin-top: 10px;
-            text-decoration: none;
-            color: blue;
+            border: solid;
+            width: 150px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: inherit;
+            background: aliceblue;
+            border-radius: 20px;
+            margin-left: 30%;
         }
+
+.mainn2 {
+    display: inline-block;
+}
 
 
     </style>
