--- a/Homework/miniProject/post-details.html
+++ b/Homework/miniProject/post-details.html
@@ -5,7 +5,40 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>post-details</title>
+    <style>
+        .main3{
+            font-size: 29px
+        }
+        .postt {
+            border: 4px solid rebeccapurple;
+            width: 50vw;
+            margin-left: 23vw;
+            font-size: 39px;
+
+
+        }
+        .xxx {
+            display: flex;
+            justify-content: space-around;
+
+            background-color: lightblue;
+            padding: 10px;
+            margin-bottom: 10px;
+
+        }
+        .coment {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+        }
+        .coment, .sss {
+            background-color: lightgrey;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+
+    </style>
 </head>
 <body>
 <script src="post-details.js"></script>
